plugins {
    id 'java'
    id 'application'
    id 'checkstyle'
    id "com.github.johnrengelman.shadow" version "7.1.2"
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

group 'org.example'
version '1.0-SNAPSHOT'


dependencies {
    testImplementation 'org.mockito:mockito-inline:2.13.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
    testImplementation "org.mockito:mockito-core:4.6.1"
    testImplementation "org.mockito:mockito-junit-jupiter:4.6.1"
    testImplementation "org.testcontainers:mongodb:1.17.6"
    testImplementation group: 'de.flapdoodle.embed', name: 'de.flapdoodle.embed.mongo', version: '4.6.1'
    checkstyle 'com.puppycrawl.tools:checkstyle:10.3.3'
    implementation 'org.slf4j:slf4j-api:2.0.0'
    implementation 'ch.qos.logback:logback-classic:1.4.0'
    implementation 'org.slf4j:log4j-over-slf4j:2.0.0'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    implementation 'ru.odnoklassniki:one-nio:1.5.0'
    implementation group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.11'
}

def incubatorArgs = ["--add-modules", "jdk.incubator.foreign"]

application {
    mainClass = 'server.Server'
}

test {
    maxHeapSize = "1G"
    useJUnitPlatform()
}

configurations {
    extraLibs
}

run {
    application
}

jar {
    manifest {
        attributes "Main-Class": "server.Server"
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

shadowJar {
    archiveBaseName.set("server")
    archiveClassifier.set('shadow')
    archiveVersion.set('0.0.1')
}

checkstyle {
    configFile = new File("checkstyle.xml")
    checkstyleTest.enabled = true
}
